--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,11 @@ set(CMAKE_C_STANDARD 99)
 
 add_executable(push_swap
         inc/push_swap.h
-        src/main.c
+        src/push_swap.c
+        src/checker.c
         src/list_push_swap.c
         src/error_ps.c
         src/cheak.c
         src/add_index.c
-        src/markup.c
         src/operations.c
         src/sort.c)
